<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >

    <TextView
        style="@style/normalText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#FF83FA"
        android:textSize="24dip"
		android:text="@string/register_activity" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:padding="10dip" >

        <!-- 账号 -->

        <TextView
            android:id="@+id/register_user_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:textColor="#FF83FA"
        	android:textSize="18dip"
            android:text="@string/login_label_username" />

        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_user_input"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:singleLine="true" />

        <!-- 密码 text -->

        <TextView
            android:id="@+id/register_password_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_register_username"
            android:layout_marginTop="3dp"
            android:textColor="#FF83FA"
        	android:textSize="18dip"
            android:text="@string/register_pwd" />

        <EditText
            android:id="@+id/et_register_new_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_input"
            android:hint="@string/login_pwd_hint"
            android:inputType="textPassword"
            android:singleLine="true" />

        <!-- 重复密码 text -->

        <TextView
            android:id="@+id/register_confirm_password_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_register_new_pwd"
            android:layout_marginTop="3dp"
            android:textColor="#FF83FA"
        	android:textSize="18dip"
            android:text="@string/register_confirm_pwd" />

        <EditText
            android:id="@+id/et_register_confirm_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_confirm_password_input"
            android:hint="@string/login_pwd_hint"
            android:inputType="textPassword"
            android:singleLine="true" />

        <!-- 取消button -->

        <Button
            android:id="@+id/bt_register_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/et_register_confirm_pwd"
            android:layout_below="@id/et_register_confirm_pwd"
            android:background="@drawable/background_login_button"
            android:text="@string/registe_lable_cancel" />
        <!-- 登录button -->

        <Button
            android:id="@+id/bt_register_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/et_register_confirm_pwd"
            android:layout_below="@id/et_register_confirm_pwd"
            android:background="@drawable/background_login_button"
            android:text="@string/registe_lable_ok" />
    </RelativeLayout>

</LinearLayout>