<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background_login">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_addnodes" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/addnodes_time" />

        <EditText
            android:id="@+id/et_addnodes_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/addnodes_money" />

        <EditText
            android:id="@+id/et_addnodes_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/addnodes_type" />

        <Spinner
            android:id="@+id/sp_addnodes_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7" >
        </Spinner>

    </LinearLayout>
   
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/addnodes_earnings" />

        <Spinner
            android:id="@+id/sp_addnodes_earnings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7" >
        </Spinner>
    </LinearLayout>
       
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/addnodes_remark" />

        <EditText
            android:id="@+id/et_addnodes_remark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip" >

        <Button
            android:id="@+id/bt_addnodes_cancel"
            android:layout_width="0dp"
            android:layout_height="30dip"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingRight="20dip"
            android:text="@string/addnodes_cancel" 
            android:textSize="16dip"
            android:background="@drawable/background_button"/>

        <Button
            android:id="@+id/bt_addnodes_add"
            android:layout_width="0dp"
            android:layout_height="30dip"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/addnodes_add" 
            android:textSize="16dip"
            android:background="@drawable/background_main_button"/>
    </LinearLayout>

</LinearLayout>