<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dip" >

        <!-- 账号 -->

        <TextView
            android:id="@+id/login_user_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="15dip"
            android:text="@string/login_label_username" />

        <EditText
            android:id="@+id/et_login_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user_input"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:singleLine="true" />
        
        <!-- 密码 text -->
        <TextView
            android:id="@+id/login_password_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_login_name"
            android:layout_marginTop="3dp"
            android:textStyle="bold"
            android:textSize="15dip"
            android:text="@string/login_label_password" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_input"
            android:hint="@string/login_pwd_hint"
            android:inputType="textPassword"
            android:singleLine="true" />
        <!-- 取消button -->

        <Button
            android:id="@+id/bt_login_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/et_login_password"
            android:layout_below="@id/et_login_password"
            android:background="@drawable/background_login_button"
            android:text="@string/login_lable_cancel" />
        <!-- 登录button -->

        <Button
            android:id="@+id/bt_login_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/et_login_password"
            android:layout_below="@id/et_login_password"
            android:background="@drawable/background_login_button"
            android:text="@string/login_label_ok" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_login_register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/login_register_link"
            android:textColor="#00CED1"
            android:textSize="20dip"
            android:textColorLink="#00CED1" />

        <ImageView
            android:id="@+id/miniTwitter_logo"
            android:layout_width="100dip"
            android:layout_height="140dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="29dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="35dp"
            android:src="@drawable/login_pet" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="140dip"
            android:layout_height="245dip"
            android:layout_alignBottom="@id/miniTwitter_logo"
            android:layout_toLeftOf="@id/miniTwitter_logo"
            android:paddingBottom="60dp"
            android:src="@drawable/loginpet_3" />
        
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="170dip"
            android:layout_height="290dip"
            android:layout_centerVertical="true"
            android:layout_alignBottom="@id/miniTwitter_logo"
            android:paddingBottom="90dp"
            android:src="@drawable/login_otherpet" />


    </RelativeLayout>

</LinearLayout>